--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Distribution / packaging
 .Python
 env/
+venv/
 build/
 develop-eggs/
 dist/
@@ -15,6 +16,3 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-
-# Serverless directories
-.serverless
