--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,10 @@ jobs:
       
       # Step 8
       - name: Add App to Zip file
-        working-directory: ./src
-        run: mkdir ../dist zip -g ../dist/app.zip -r .
+        run: | 
+          mkdir dist
+          cd ./src
+          zip -g ../dist/app.zip -r .
       
       # Step 9
       - name: Upload zip file artifact
