--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Create Zipfile archive of Dependencies
         working-directory: ./src
         run: |
-          cd ./venv/lib/python3.7/site-packages
+          cd ./src/venv/lib/python3.7/site-packages
           zip -r9 ../../../../app.zip .
       
       # Step 8
