--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,15 +29,6 @@ jobs:
       # Step 3
       - name: Install Python Virtual ENV
         run: pip3 install virtualenv
-      # Step 4
-      - name:  Setup Virtual env
-        uses: actions/cache@v2
-        id: cache-venv
-        with:
-          path: venv
-          key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements*.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-venv-
       # Step 5
       - name: Activate and Install Depencies into Virtual env
         working-directory: ./src
@@ -49,7 +40,7 @@ jobs:
       - name: Create Zipfile archive of Dependencies
         working-directory: ./src
         run: |
-          cd ./src/venv/lib/python3.7/site-packages
+          cd ./venv/lib/python3.7/site-packages
           zip -r9 ../../../../app.zip .
       
       # Step 8
