--- a/deployment/cvt-template.yml
+++ b/deployment/cvt-template.yml
@@ -9,15 +9,42 @@ Mappings:
 
 Resources:
 
-    ConnectedVehicleHelper:
+    lambdaExecutionRole:
+            Type: AWS::IAM::Role
+            Properties:
+                AssumeRolePolicyDocument:
+                    Version: "2012-10-17"
+                    Statement:
+                        - Effect: "Allow"
+                        Principal:
+                            Service:
+                                - lambda.amazonaws.com
+                        Action:
+                            - sts:AssumeRole
+                Path: "/"
+                Policies:
+                    - PolicyName: "booster-function-logs"
+                    PolicyDocument:
+                        Version: "2012-10-17"
+                        Statement:
+                            - Effect: "Allow"
+                                Action:
+                                    - "Logs:*"
+                                Resource: "arn:aws:logs:*:*:*"
+
+    CVTUpfitFunction:
         Type: "AWS::Lambda::Function"
         Properties:
-            Description: "AWS Connected Vehicle Solution deployment custom resource helper service"
+            Description: "AWS Connected Vehicle Upfit Solution deployment "
             Code:
                 S3Bucket: !Join ["-", [!FindInMap ["SourceCode", "General", "S3Bucket"], Ref: "AWS::Region"]]
                 S3Key: !Join ["/", [!FindInMap ["SourceCode", "General", "KeyPrefix"],  "app.zip"]]
             Handler: handler.handler
+            Role:
+                Fn::GetAtt: lambdaExecutionRole.Arn
             FunctionName: !Sub "${AWS::StackName}-cvt-upfit-function"
             MemorySize: 512
             Runtime: python3.7
             Timeout: 300
+        DependsOn:
+            - lambdaExecutionRole
