--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,14 +50,13 @@ jobs:
         run: |
           mkdir build
           cd ./dist &&  zip ../build/app.zip -r .
-
-      # Step 9
+      # Step 6
       - name: Upload zip file artifact
         uses: actions/upload-artifact@v2
         with:
           name: app
           path: dist/app.zip
-
+      # Step 7
       - name: Push Zip to S3
         uses: zdurham/s3-upload-github-action@master
         with:
@@ -69,3 +68,11 @@ jobs:
           S3_KEY: 'dist/'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      # Step 8
+      - name: Deploy to AWS CloudFormation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: CVT-IoT
+          template: ./deployment/cvt-template.yaml
+          # parameter-overrides: "MyParam1=myValue,MyParam2=${{ secrets.MY_SECRET_VALUE }}"
+
