--- a/deployment/cvt-template.yaml
+++ b/deployment/cvt-template.yaml
@@ -13,7 +13,7 @@ Resources:
     Properties:
       Description: "AWS Connected Vehicle Upfit Solution deployment "
       Code:
-        S3Bucket: !Join ["-", [!FindInMap ["SourceCode", "General", "S3Bucket"], Ref: "AWS::Region"]]
+        S3Bucket: !FindInMap ["SourceCode", "General", "S3Bucket"]
         S3Key: !Join ["/", [!FindInMap ["SourceCode", "General", "KeyPrefix"],  "app.zip"]]
       Handler: handler.handler
       Role: !GetAtt LambdaExecutionRole.Arn
