--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,6 @@
 Adafruit_PCA9685==1.0.1
 greengrasssdk==1.6.0
-rpi-ws281x==1.1.3
+# rpi-ws281x==1.1.3
 smbus2==0.4.1
 neopixel-plus==1.7
-adafruit-circuitpython-neopixel
+# adafruit-circuitpython-neopixel
