--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,6 +75,6 @@ jobs:
         with:
           name: CVT-IoT-dev
           template: ./deployment/cvt-template.yaml
-          no-fail-on-empty-changeset: "1"
+          # no-fail-on-empty-changeset: "1"
           # parameter-overrides: "MyParam1=myValue,MyParam2=${{ secrets.MY_SECRET_VALUE }}"
 
