--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,14 +67,14 @@ jobs:
           AWS_REGION: 'us-east-2'
           S3_BUCKET:  'cvt-iot-250'
           S3_KEY: 'dist/'
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       # Step 8
       - name: Deploy to AWS CloudFormation
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: CVT-IoT-dev
           template: ./deployment/cvt-template.yaml
-          # no-fail-on-empty-changeset: "1"
+          no-fail-on-empty-changeset: "1"
           # parameter-overrides: "MyParam1=myValue,MyParam2=${{ secrets.MY_SECRET_VALUE }}"
 
