--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,14 +67,21 @@ jobs:
           AWS_REGION: 'us-east-2'
           S3_BUCKET:  'cvt-iot-250'
           S3_KEY: 'dist/'
-          # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Push Zip to S3
+        uses: zdurham/s3-upload-github-action@master
+        with:
+          args: --acl public-read
+        env:
+          FILE: ./deployment/cvt-template.yaml
+          AWS_REGION: 'us-east-2'
+          S3_BUCKET:  'cvt-iot-250'
+          S3_KEY: 'dist/'
       # Step 8
       - name: Deploy to AWS CloudFormation
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: CVT-IoT-dev
-          template: ./deployment/cvt-template.yaml
+          template: https://cvt-iot-250.s3.us-east-2.amazonaws.com/dist/cvt-template.yaml
           no-fail-on-empty-changeset: "1"
           # parameter-overrides: "MyParam1=myValue,MyParam2=${{ secrets.MY_SECRET_VALUE }}"
 
