--- a/deployment/cvt-template.yaml
+++ b/deployment/cvt-template.yaml
@@ -55,4 +55,9 @@ Resources:
           - Effect: "Allow"
             Action:
             - logs:*
-            Resource: arn:aws:logs:*:*:*   
+            Resource: arn:aws:logs:*:*:* 
+
+Outputs:
+  CVTSmartBoxFunctionARN:
+    Description: ARN of CVTSmartBoxFunction created lambda function
+    Value: !Ref CVTSmartBoxFunction
