--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,5 +91,5 @@ jobs:
           template: "https://cvt-iot-250.s3.us-east-2.amazonaws.com/dist/${{ steps.generate-uuid.outputs.uuid }}/cvt-template.yaml"
           no-fail-on-empty-changeset: "1"
           no-execute-changeset: 1
-          # parameter-overrides: "MyParam1=myValue,MyParam2=${{ secrets.MY_SECRET_VALUE }}"
+          parameter-overrides: "AppVersion=${{ steps.generate-uuid.outputs.uuid }}"
 
