--- a/deployment/cvt-template.yaml
+++ b/deployment/cvt-template.yaml
@@ -1,6 +1,12 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: The AWS CloudFormation template for deployment of CVT - SmartBox
 
+
+Parameters: # params passed to "--parameter-overrides" in CLI
+  AppVersion:
+    Description: Unique name for your bucket. This will be in the S3 url to your React app.
+    Type: String
+
 Mappings:
   SourceCode:
     General:
@@ -14,7 +20,7 @@ Resources:
       Description: "AWS Connected Vehicle SmartBox Solution deployment "
       Code:
         S3Bucket: !FindInMap ["SourceCode", "General", "S3Bucket"]
-        S3Key: !Join ["/", [!FindInMap ["SourceCode", "General", "KeyPrefix"],  "app.zip"]]
+        S3Key: !Join ["/", [!FindInMap ["SourceCode", "General", "KeyPrefix"], !Ref AppVersion, "app.zip"] ]
       Handler: handler.handler
       Role: !GetAtt LambdaExecutionRole.Arn
       FunctionName: !Sub "${AWS::StackName}-cvt-SmartBox-function"
